# EMF

./: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  compose.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.cmd  setup.sh
.github/workflows/: ci-base-image.yml  ci-workers.yml  docker-publish-base.yml  docker-publish.yml  publish-base-image.yml  publish-workers.yml
config/: __init__.py
config/cgm_worker/: default_area_eic_map.json  local_file_import.properties  merger.properties  model_merge.properties  post_processing.properties  replacement.properties  replacement_conf.json  replacement_config.json  scaler.properties  validator.properties
config/integrations/: edx.properties  elastic.properties  minio.properties  object_storage.properties  opdm.properties  rabbit.properties
config/logging/: custom_logger.properties  pypowsybl_logger.properties
config/model_quality/: model_quality.properties
config/model_retriever/: model_retriever.properties
config/model_validator/: model_validator.properties
config/report_publisher/: report_publisher.properties  test_results.xml  test_results2.xml
config/schedule_retriever/: schedule_retriever.properties
config/task_generator/: manual_process_conf.json  manual_task_generator.properties  manual_timeframe_conf.json  process_conf.json  task_generator.properties  timeframe_conf.json
config/xslt_service/: CGM_entsoeQAReport_Level_8.xsl  (+2 more)
docker/: Dockerfile  README.md  compose.sh  docker-compose.yml  run.sh
emf/: model_retriever.py  schedule_retriever.py
src/: decorators.py
(+133 files in other folders)
