[project]
name = "emf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aniso8601>=10.0.1",
    "croniter>=6.0.0",
    "edx>=0.0.16",
    "elasticsearch>=9.0.1",
    "lxml>=5.4.0",
    "minio>=7.2.15",
    "ndjson>=0.3.1",
    "opdm-api>=0.1.3",
    "pandas==2.2.2",
    "pika>=1.3.2",
    "pypowsybl==1.9.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "saxonche>=12.7.0",
    "triplets>=0.0.10",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "rcc-pypi"
url = "https://artifactory.elering.sise/artifactory/api/pypi/rcc-pypi/simple"

[tool.uv]
allow-insecure-host = ["artifactory.elering.sise"]
