[project]
name = "emf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pypowsybl==1.13.0",
    "aniso8601",
    "lxml",
    "edx",
    "opdm-api",
    "triplets",
    "ndjson",
    "elasticsearch",
    "minio",
    "pytz",
    "requests",
    "pika",
    "saxonche",
    "croniter",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"